# zip_combine

./: .gitignore  README.md  controller.py  pyproject.toml  resources.qrc  resources_rc.py  run.py
QT_file/: AboutWindow.ui  MainWindow.ui
example/: test5.txt  test6.txt
statics/: icon.xcf
test/: test.py
ui_file/: AboutUI.py  CustomWidgets.py  MainUI.py
